tests/compile-fail/integration_suite__integration__ecl_features__reg_as_other_timeline_arg.snap
---
source: tests/integration/ecl_features.rs
expression: stderr
---
error: non-constant expression in language without registers
  ┌─ <input>:9:19
  │
9 │     hasMsgArg0(3, $REG[20], 3);
  │                   ^^^^^^^^ non-const expression


